fully working win/loose, needs cats game

--- a/app/views/games/tic_tac_toe.html.haml
+++ b/app/views/games/tic_tac_toe.html.haml
@@ -34,5 +34,9 @@
   socket.on('alert', function (data) {
     alert(data);
   });
+  socket.on('success', function (data) {
+    console.log(data);
+    runner.answer(data)
+  });
 
 
