working out bugs, getting better

--- a/app/views/games/index.html.haml
+++ b/app/views/games/index.html.haml
@@ -1,3 +1,9 @@
+Welcome 
+= current_user.email
+= link_to 'login', '/users/sign_in'
+= link_to 'logout', '/users/sign_out'
+
+%hr
 %h1 Listing games
 
 %table
